workshop/teams-management/teams-app/k8s/teams-ui-deployment.yaml
# k8s/teams-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teams-ui
  namespace: engineering-platform
  labels:
    app: teams-ui
    component: frontend
  annotations:
    commit-sha: 8b514a1cb354
spec:
  replicas: 3
  selector:
    matchLabels:
      app: teams-ui
  template:
    metadata:
      labels:
        app: teams-ui
        component: frontend
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 2000
        runAsNonRoot: true
      containers:
      - name: teams-ui
        image: teams-ui:local-v3
        # image: olivercodes01/teams-app:0.0.7
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        volumeMounts:
        - mountPath: /var/cache/nginx
          name: cache-nginx
        - mountPath: /var/run
          name: var-run
        - mountPath: /etc/nginx/conf.d/default.conf
          name: teams-ui-nginx-conf
          subPath: default.conf
          readOnly: true        
      volumes:
      - emptyDir: {}
        name: cache-nginx
      - emptyDir: {}
        name: var-run  # Add this one
      - configMap:
          name: teams-ui-nginx-conf
        name: teams-ui-nginx-conf
